Added self-intro page, add proper name to footer, add header div

--- a/about.html
+++ b/about.html
@@ -119,7 +119,8 @@
     <footer id="section-footer">
       <div class="container">
         <p class="copyright">
-          Copyright &copy; Taman Syahdu Park Guide by Tini
+          Copyright &copy; Taman Syahdu Park Guide by
+          <a href="/self-introduction.html">Nur Fatini</a>
         </p>
 
         <div class="nav-menu">
