--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="self-intro-bar">
+      <div class="container">
+        <h5>
+          Hey I'm Nur Fatini, creator of this site, read more about me
+          <a href="/self-introduction.html">here</a>
+        </h5>
+      </div>
+    </div>
     <!-- Section: Navigation -->
     <nav id="section-nav">
       <div class="container">
@@ -97,7 +105,8 @@
     <footer id="section-footer">
       <div class="container">
         <p class="copyright">
-          Copyright &copy; Taman Syahdu Park Guide by Tini
+          Copyright &copy; Taman Syahdu Park Guide by
+          <a href="/self-introduction.html">Nur Fatini</a>
         </p>
 
         <div class="nav-menu">
