--- a/resource.html
+++ b/resource.html
@@ -26,13 +26,41 @@
     <header id="section-page-header"><h1>List of Resources</h1></header>
 
     <div class="container full-height">
+      <h4 class="pb-20">
+        <i>All resources in this website are free of copyright infringement</i>
+      </h4>
       <ul>
-        <li>Images: https://unsplash.com/</li>
-        <li>Video Editing: https://mergevideo.online/#</li>
-        <li>Video Editing: https://www.kapwing.com/</li>
-        <li>
+        <li class="mb-20">
+          Images:
+          <a target="_blank" href="https://unsplash.com/"
+            >https://unsplash.com/</a
+          >
+        </li>
+        <li class="mb-20">
+          Video Editing tool:
+          <a target="_blank" href="https://mergevideo.online/#"
+            >https://mergevideo.online/#</a
+          >
+        </li>
+        <li class="mb-20">
+          Video Editing tool:
+          <a target="_blank" href="https://www.kapwing.com/"
+            >https://www.kapwing.com/</a
+          >
+        </li>
+        <li class="mb-20">
+          Video Editing tool:
+          <a target="_blank" href="https://videos.pexels.com/"
+            >https://videos.pexels.com/</a
+          >
+        </li>
+        <li class="mb-20">
           Music for video:
-          https://www.bensound.com/royalty-free-music/track/summer
+          <a
+            target="_blank"
+            href="https://www.bensound.com/royalty-free-music/track/s"
+            >https://www.bensound.com/royalty-free-music/track/s</a
+          >ummer
         </li>
       </ul>
     </div>
@@ -41,7 +69,8 @@
     <footer id="section-footer">
       <div class="container">
         <p class="copyright">
-          Copyright &copy; Taman Syahdu Park Guide by Tini
+          Copyright &copy; Taman Syahdu Park Guide by
+          <a href="/self-introduction.html">Nur Fatini</a>
         </p>
 
         <div class="nav-menu">
